# UDBM

./: .clang-format  .gitignore  CMakeLists.txt  README.md  acinclude.m4  autogen.sh  build.sh  clean.sh  compile.sh  config.h.cmake  configure  configure.ac  flake.nix  getlibs.sh  toolchain-x86_64-w64-mingw32.cmake  udbm-config  version.sh
.github/workflows/: build-linux.yml  build-macos.yml  build-nix.yml  build-win.yml  build.yml  docs.yml
base/: CMakeLists.txt  DataAllocator.cpp  Enumerator.cpp  Timer.cpp  bitstring.c  c_allocator.c  doubles.c  exceptions.cpp  intutils.cpp  stats.cpp
base/tests/: CMakeLists.txt  benchmark_copy.cpp  lib.dep  makefile.def  makefile.rules  test_allocator.cpp  test_array.cpp  test_bit_string.c  test_crash_allocator.cpp  test_int_utils.c  test_item_allocator.cpp  test_timer.cpp  testallocator.cpp  testarray.cpp  testbitptr.cpp  testbitstring.c  testcppbitstring.cpp  testcrashallocator.cpp  testintutils.c  testitemallocator.cpp  testmac.c  testobject.cpp  testtimer.cpp
cmake/: UUtils.cmake  clang-tidy.cmake  doctest.cmake  sanitizer.cmake  xxhash.cmake
cmake/toolchain/: i686-linux.cmake  i686-w64-mingw32.cmake  x86_64-darwin.cmake  x86_64-linux.cmake
dbm/: CMakeLists.txt  DBMAllocator.cpp  DBMAllocator.h  dbm.c  dbm.h  fed.cpp  fed_dbm.cpp  gen.c  infimum.cpp  infimum.h  mingraph.c  mingraph_cache.cpp  mingraph_cache.h  mingraph_coding.h  mingraph_equal.c  mingraph_read.c  mingraph_relation.c  mingraph_write.c  partition.cpp  pfed.cpp  priced.cpp  print.cpp
dbm/ruby/: INSTALL.TXT  README  extconf-windows.rb  extconf.rb  install.sh  linux-dist.sh  quickref.txt  udbm-gtk.rb  udbm-sys.rb  udbm.cpp  udbm.rb  windows-dist.sh
dbm/ruby/examples/: leader-5-10-3.rb
dbm/swig/: Makefile.swig  UDBM.i  compile.sh  wrapper.cpp  wrapper.h
dbm/tests/: CMakeLists.txt  lib.dep  makefile.def  makefile.rules  test_dbm.c  test_ext.c  test_extrapolation.c  test_fed.cpp  test_fed_dbm.cpp  test_infimum.cpp  test_mingraph.c  test_valuation.cpp  testdbm.c  testdbmfederation.c  testext.c  testextrapolation.c  testfed.cpp  testfeddbm.cpp  testinfimum.cpp  testmingraph.c  testvaluation.cpp  xdbm.c  xfed.c
dbm/tests/examples/: ex1.txt  nastytests.sh
debug/: CMakeLists.txt  c_allocator.c  new.cpp  utils.cpp
debug/tests/: CMakeLists.txt  lib.dep  makefile.rules  test_new.cpp  test_utils.c  testnew.cpp  testutils.c
docs/: architecture.eps  architecture.fig  manual.bib  manual.tex
hash/: CMakeLists.txt  H3HashFunction.cpp  Makefile  PointerTable.cpp  compute.cpp  tables.cpp
hash/tests/: CMakeLists.txt  Makefile  benchmark.cpp  h3scale.cpp  lib.dep  makefile.rules  test_compute.cpp  test_tables.cpp  testcompute.c  testitemtables.cpp  teststreamhasher.cpp  testtables.cpp  testtinytable.cpp
include/: config.h  config.h.in
include/base/: DataAllocator.h  Enumerator.h  ItemAllocator.h  Timer.h  array_t.h  bitstring.h  c_allocator.h  doubles.h  exceptions.h  inttypes.h  intutils.h  linkable.h  memory.hpp  pointer.h  relation.h  stats.h
include/dbm/: ClockAccessor.h  Valuation.h  constraints.h  cost_type.h  dbm.h  dbm_raw.hpp  fed.h  gen.h  inline_fed.h  mingraph.h  partition.h  pfed.h  priced.h  print.h  valuation.h
include/debug/: macros.h  malloc.h  monitor.h  new.h  utils.h
include/hash/: compute.h  tables.h
include/io/: Base64Coder.h  Connection.h  FileStreamBuffer.h  IOQueue.h
io/: Base64Coder.cpp  CMakeLists.txt  Connection.cpp
io/tests/: CMakeLists.txt  lib.dep  makefile.def  makefile.rules  testioqueue.cpp
scripts/: Doxyfile.in  Makefile.module.in  Makefile.tests.in  acinclude.m4  cflags.txt  config.in  configure.ac.in  download.sh  export.sh  exportdbm.sh  gendoc.sh  getmodules.sh  index.html.in  makefile.in  mergelibs.sh  pretty_printer.py  readconfig.sh  udbm-config.in  udbm-header.txt  udbm_pretty_printer.py
src/: CMakeLists.txt  DBMAllocator.cpp  DBMAllocator.h  config.h.cmake  cost_type.cpp  dbm.c  dbm.h  fed.cpp  fed_dbm.cpp  gen.c  infimum.cpp  infimum.h  mingraph.c  mingraph_cache.cpp  mingraph_cache.h  mingraph_coding.h  mingraph_equal.c  mingraph_read.c  mingraph_relation.c  mingraph_write.c  partition.cpp  pfed.cpp  priced.cpp  print.cpp  valuation.cpp
src/ruby/: INSTALL.TXT  extconf-darwin.rb  install.sh  udbm-callback.rb  udbm-mdi.rb  udbm.cpp
src/ruby/examples/: fisher.rb
src/swig/: extconf.rb  udbm.rb  wrapper.cpp  wrapper.h
src/tests/: test_fed.cpp  test_infimum.cpp  test_mingraph.c  xdbm.c
test/: CMakeLists.txt  test_allocation.cpp  test_constraint.cpp  test_dbm.c  test_ext.c  test_extrapolation.c  test_fed.cpp  test_fed_dbm.cpp  test_fp_intersection.cpp  test_mingraph.c  test_pfed.cpp  test_valuation.cpp  xfed.c
toolchains/: mingw.cmake
